--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,6 +16,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Set Git Username and Email
+      run: |
+       git config user.name ${{ secrets.USERNAME }}
+       git config user.email ${{ secrets.EMAIL }}
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
