--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -10,21 +10,32 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [10.x]
-
     steps:
     - uses: actions/checkout@v2
-    - name: Set Git Username and Email
-      run: |
-       git config user.name ${{ secrets.USERNAME }}
-       git config user.email ${{ secrets.EMAIL }}
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
+
+    - name: Setup Node
+      uses: actions/setup-node@v2.1.0
       with:
-        node-version: ${{ matrix.node-version }}
-    - run: yarn install
-    - run: yarn run deploy
-      env:
-        CI: true
+        node-version: '10.x'
+
+    - name: Get yarn cache
+      id: yarn-cache
+      run: echo "::set-output name=dir::$(yarn cache dir)"
+
+    - name: Cache dependencies
+      uses: actions/cache@v2
+      with:
+        path: ${{ steps.yarn-cache.outputs.dir }}
+        key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-yarn-
+
+    - run: yarn install  --frozen-lockfile
+    - run: yarn build
+    - run: yarn export
+
+    - name: Deploy
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.TOKEN }}
+        publish_dir: ./build
